<resources>
    <string name="app_name">Easy2Learn</string>
    <string name="enter_name_label">Enter Full Name</string>
    <string name="name_label">Full Name</string>
    <string name="email">Email</string>
    <string name="map_item_label">Map</string>
    <string name="list_item_label">List</string>
    <string name="title_label">Title</string>
    <string name="body_label">Body</string>
    <string name="price">Price</string>
    <string name="back">back</string>
    <string name="forward">forward</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_label">LOGIN</string>
    <string name="signUp_label">Signup?</string>
    <string name="submit_label">SUBMIT</string>
    <string name="register_label">Register</string>
    <string name="intoduce_label">let\'s know you</string>
    <string name="email_ask">Enter Your Email</string>
    <string name="password_ask">Enter Your Password</string>
    <string name="password_reask">Renter Your Password</string>
    <string name="password_ask_confirm">renter your password :</string>
    <string name="list_empty">There are no photos </string>
    <string-array name="spinner_role">
        <item>Choose Your Role</item>
        <item>Teacher</item>
        <item>Student</item>
    </string-array>

    <string-array name="spinner_sort">
        <item>SORT</item>
        <item>Price low to high</item>
        <item>Price high to low</item>
        <item>Rating low to high</item>
        <item>Rating high to low</item>
        <item>Distance low to high</item>
        <item>Distance high to low</item>
        <item>Recommended</item>
    </string-array>

    <string-array name="spinner_filter">
        <item>FILTER</item>
        <item>recomended</item>
        <item>price under 100</item>
        <item>price above 100</item>
    </string-array>

    <string-array name="spinner_proffesion">
        <item>Choose Your Proffesion</item>
        <item>phisics</item>
        <item>math</item>
        <item>english</item>
        <item>history</item>
        <item>civics</item>
        <item>bible</item>
        <item>grammar</item>
    </string-array>
</resources>