<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:scaleType="centerCrop"
        android:src="@drawable/blur_back1" />


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:src="@drawable/circle_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/activity_login_TV_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Sign in"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_LBL_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_label"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/activity_login_EDT_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_email_white_24"
                android:drawablePadding="20dp"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_LBL_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_label"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_login_BTN_submit"
            android:layout_width="170dp"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/black"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_label"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_LBL_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/signUp_label"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>