<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:scaleType="centerCrop"
        android:src="@drawable/blur_back1" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:src="@drawable/circle_logo"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signup_LBL_fullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint = "@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_label"
            android:textColor = "@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/signup_EDT_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_full_name"
                android:drawablePadding="20dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signup_LBL_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint = "@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_ask"
            android:textColor = "@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_alternate_email"
                android:drawablePadding="20dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signup_LBL_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint = "@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_ask"
            android:textColor = "@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:textSize="17dp"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signup_LBL_password_confirm"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint = "@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_reask"
            android:textColor = "@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:textSize="17dp"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/activity_signup_SPN_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:id="@+id/signup_IMG_addImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:clickable="true"
            android:src="@drawable/ic_camera_foreground"/>

        <TextView
            android:id="@+id/activity_signup_TV_SeekBar_cost_rating"
            android:fontFamily="@font/annie_use_your_telescope"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="60dp"
            android:text="How much for lesson:      Price 100"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <SeekBar
            android:id="@+id/activity_signup_SeekBar_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="200"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:progress="100"
            android:layout_marginBottom="3dp"/>

        <TextView
            android:id="@+id/activity_signup_TV_select_proffession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/akaya_telivigala"
            android:textSize="18dp"
            android:hint="Select Proffession"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            android:background="@color/browser_actions_bg_grey"
            />

        <TextView
            android:id="@+id/activity_signup_LBL_introduce_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/akaya_telivigala"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/intoduce_label"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_signup_BTN_submit"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/purple_100"
            android:backgroundTintMode="add"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/register_label"
            android:textSize="20sp"
            android:textStyle="bold"  />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>